# ha-monitoring-bot

./: .gitignore  README.md  README.rst  example_botconfig.json  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-test.yml
contrib/roles/habot-service/defaults/: main.yml
contrib/roles/habot-service/files/etc/systemd/system/: hamonitor.service
contrib/roles/habot-service/handlers/: main.yml
contrib/roles/habot-service/tasks/: main.yml
contrib/roles/habot-service/templates/opt/hamonitor/: habotconfig.json.j2
contrib/roles/habot-service/vars/: main.yml
src/hamonitor/: __init__.py  config.py
tests/: test_ha_monitoring_bot.py
