[metadata]
name = ha-monitoring-bot
description = Simple Telegram Bot which monitors your servers (e.g. your Home Assistant server) and informs you via Telegram.
version = 0.0.0.dev
author = Christoph Hille
author-email = hille721@gmail.com
license = MIT License
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/hille721/ha-monitoring-bot
project-urls =
    Documentation = https://github.com/hille721/ha-monitoring-bot
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    errbot==6.1.*
    python-telegram-bot==13.8.*
    gitpython==3.1.*

[options.packages.find]
where = src
exclude =
    tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    tests/*
    **plugins/err-hamonitor/*
max-line-length = 99

[tool:pytest]
addopts = -v --black --flake8 --pylint --pylint-error-types=EF --cov=src/hamonitor